--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         height: 1000vh;
         width: 1000vw;
         overflow: hidden;
+        z-index: -999;
       }
       .player{
         width: 50px;
@@ -52,6 +53,12 @@
         box-shadow: 1px 1px 3px black;
         position: fixed;
       }
+      .stone{
+        position: absolute;
+        background-image: url('./images/stone.png');
+        background-size: contain;
+        z-index: -2;
+      }
     </style>
   </head>
 
@@ -65,6 +72,7 @@
       
       <div class="enemy"></div>
     </main>
+    <script src="./modules/constants.js" type="module"></script>
     <script src="./index.js" type="module"></script>
     <script  src="./modules/Player.js" type="module"></script>
     <script src="./modules/Enemy.js" type="module"></script>
