fixed movement and add collision check

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       body{
         margin:0;
-        background-image: url('./ground.png');
+        background-image: url('./images/ground.png');
         height: 1000vh;
         width: 1000vw;
         overflow: hidden;
@@ -72,10 +72,10 @@
       
       <div class="enemy"></div>
     </main>
-    <script src="./modules/constants.js" type="module"></script>
+    <script src="./js/constants.js" type="module"></script>
     <script src="./index.js" type="module"></script>
-    <script  src="./modules/Player.js" type="module"></script>
-    <script src="./modules/Enemy.js" type="module"></script>
-    <script src="./modules/Fireball.js" type="module" ></script>
+    <script  src="./js/Player.js" type="module"></script>
+    <script src="./js/Enemy.js" type="module"></script>
+    <script src="./js/Fireball.js" type="module" ></script>
   </body>
 </html>
