--- a/index.html
+++ b/index.html
@@ -3,63 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>MageSurvival</title>
-
-    <style>
-      body{
-        margin:0;
-        background-image: url('./images/ground.png');
-        height: 1000vh;
-        width: 1000vw;
-        overflow: hidden;
-        z-index: -999;
-      }
-      .player{
-        width: 50px;
-        height: 50px;
-        position: absolute;
-        background-image: url('./images/player.png');
-        background-size: contain;
-      }
-      .enemy{
-        width: 50px;
-        height: 50px;
-        position: absolute;
-        background-image: url('https://opengameart.org/sites/default/files/skeleton_idle.gif');
-        background-size: contain;
-      }
-
-      .hp{
-       margin:20px 0 0 20px;
-        width: 200px;
-        height: 20px;
-        background-color: red;
-        border-radius: 3px;
-      }
-
-      .fireball{
-        width: 25px;
-        height: 25px;
-        background-color: orange;
-        border-radius: 50%;
-        position: absolute;
-
-      }
-      header{
-        padding-top: 1px;
-        width: 300px;
-        height: 200px;
-        background-color: grey;
-        border-radius: 10px;
-        box-shadow: 1px 1px 3px black;
-        position: fixed;
-      }
-      .stone{
-        position: absolute;
-        background-image: url('./images/stone.png');
-        background-size: contain;
-        z-index: -2;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css"/>
   </head>
 
   <body>
@@ -69,7 +13,6 @@
     <main>
       <div class="player" src="./images/player.png">
       </div>
-      
       <div class="enemy"></div>
     </main>
     <script src="./js/constants.js" type="module"></script>
